--- a/index.html
+++ b/index.html
@@ -30,8 +30,19 @@
         <div class="content-right">
             This is a placeholder for an image
         </div>
-       
-   
+    </div>
+
+    <div class="upper-middle">
+     <h2>Some random information</h2>
+        <div class="emptySquares"></div>
+        <div class="text">
+            <ul>
+                <li>This is text no 1</li>
+                <li>This is text no 2</li>
+                 <li>This is text no 3</li>
+                 <li>This is text no 4</li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
