Edited the lower-middle and lower portins of the webpage

--- a/index.html
+++ b/index.html
@@ -44,5 +44,14 @@
             </ul>
         </div>
     </div>
+    <div class="lower-middle">
+     <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
+        <h2>-Thor, God of Thunder</h2>
+    </div>
+    <div class="lower">
+        <h2>Call to action it's time!</h2>
+        <p>Sign up for our product by clicking the button right over there</p>
+        <button>Sign up</button>
+    </div>
 </body>
 </html>
