--- a/index.html
+++ b/index.html
@@ -53,5 +53,8 @@
         <p>Sign up for our product by clicking the button right over there</p>
         <button>Sign up</button>
     </div>
+    <div class="footer">
+        Copyright c The Odin Project 2021
+    </div>
 </body>
 </html>
