Added css rules to header class and added elements in html
-added background to the header
-added different css rules for changing font size, font color, font family ,etc to multiple elements of the header class

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <div class="left-side">
-            <h2>Header Logo</h2>
+            <p>Header Logo</p>
     </div>
         <div class="right-side">
             <ul>
@@ -23,8 +23,9 @@
              </ul>
         </div>
         <div class="content-left">
-            <h1>This website is awesome</h1>
-            <p>The webpage has some kind of jerk I wouuld say </p>
+            <p>This website is awesome</p>
+            <div>
+            The webpage has some kind of jerk I would say </div>
             <button>Sign up</button>
         </div>
         <div class="content-right">
