Added style to the elements of the upper-middle class and replaced element h2 to p in class upper-middle
-added font size,font weight and font color to element p of class upper-middle
-added font color and font size to ul element of class upper-middle

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="upper-middle">
-     <h2>Some random information</h2>
+     <p>Some random information</p>
         <div class="emptySquares"></div>
         <div class="text">
             <ul>
