Added additional style to container class
-created a new 'conatainer' class that wraps 'left-side' and 'right-side' classes
-changed the 'conatainer' and 'ul' of the 'right-side' to flex display
-added gap to 'ul' in class'right-side'
-used justify content in the conatainer class to align elements

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <div class="header">
+        <div class="container">
         <div class="left-side">
             <p>Header Logo</p>
     </div>
@@ -22,6 +23,7 @@
                 <li>header link two</li>
              </ul>
         </div>
+    </div>
         <div class="content-left">
             <p>This website is awesome</p>
             <div>
