--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
              </ul>
         </div>
     </div>
+    <div class="container1">
         <div class="content-left">
             <p>This website is awesome</p>
             <div>
@@ -31,9 +32,10 @@
             <button>Sign up</button>
         </div>
         <div class="content-right">
-            This is a placeholder for an image
+            <p>This is a placeholder for an image</p>
         </div>
     </div>
+</div>
 
     <div class="upper-middle">
      <p>Some random information</p>
