--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
 
     <div class="upper-middle">
      <p>Some random information</p>
-        <div class="emptySquares"></div>
+        <div class="emptySquares">
+            <div class="space1"></div>
+            <div class="space2"></div>
+            <div class="space3"></div>
+            <div class="space4"></div>
+        </div>
         <div class="text">
             <ul>
                 <li>This is text no 1</li>
