--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
         <div>-Thor, God of Thunder</div>
     </div>
     <div class="lower">
+    <div>
         <h2>Call to action it's time!</h2>
         <p>Sign up for our product by clicking the button right over there</p>
+    </div>
         <button>Sign up</button>
     </div>
     <div class="footer">
