Add content to header
-added links to li element using a element in the class right-side
-added image link to class content-right using img element
-changed the width and height of class content-right

--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
     </div>
         <div class="right-side">
             <ul>
-              <li>header link one</li>
-                <li>header link two</li>
-                <li>header link two</li>
+              <li><a href="https://en.wikipedia.org/wiki/One_Piece_(TV_series)">About</a></li>
+                <li><a href="https://www.netflix.com/title/80217863">Watch</a></li>
+                <li><a href="https://onepiece.fandom.com/wiki/One_Piece_Wiki">Fandom</a></li>
              </ul>
         </div>
     </div>
     <div class="container1">
         <div class="content-left">
-            <p>This website is awesome</p>
+            <p>One Piece</p>
             <div>
-            The webpage has some kind of jerk I would say </div>
+            The webpage is for all the One Piece fans and Oda himself </div>
             <button>Sign up</button>
         </div>
         <div class="content-right">
-            <p>This is a placeholder for an image</p>
+            <img src="download.jpeg" alt="onepiece logo">
         </div>
     </div>
 </div>
