Add images and links to empty elements
-Add src in all the img element
-Add href in all the a element
-Add quote in the class lower-middle
-adjust the width of all the img element
 according to their parent element and
 make height as auto

We have to add the same width in the img
selector as that of their parent element
and height as auto because it will adjust
the dimensions of the image to fit the
parent container without distortion

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header">
         <div class="container">
         <div class="left-side">
-            <p>Header Logo</p>
+            <p><img src="png-transparent-one-piece-logo-monkey-d-luffy-one-piece-usopp-logo-pirate-hat-manga-jolly-roger-smiley-removebg-preview.jpg" alt="pirate skull"></p>
     </div>
         <div class="right-side">
             <ul>
@@ -32,31 +32,31 @@
             <button>Sign up</button>
         </div>
         <div class="content-right">
-            <img src="download.jpeg" alt="onepiece logo">
+            <img src="One-Piece-Logo.jpg" alt="onepiece logo">
         </div>
     </div>
 </div>
 
     <div class="upper-middle">
-     <p>Some random information</p>
+     <p>Top 4 Strawhat Pirates</p>
         <div class="emptySquares">
-            <div class="space1"></div>
-            <div class="space2"></div>
-            <div class="space3"></div>
-            <div class="space4"></div>
+            <div class="space1"><img src="1314527.jpeg"></div>
+            <div class="space2"><img src="download.jpeg"></div>
+            <div class="space3"><img src="533921145674013.Y3JvcCwzNDE4LDI2NzMsNzY5LDE4NDQ.png"></div>
+            <div class="space4"><img src="jinbe-1064437.jpg"></div>
         </div>
         <div class="text">
             <ul>
-                <li>This is text no 1</li>
-                <li>This is text no 2</li>
-                 <li>This is text no 3</li>
-                 <li>This is text no 4</li>
+                <li>Monkey D Luffy </li>
+                <li>Roronoa Zoro </li>
+                 <li>Vinsmoke Sanji</li> 
+                 <li>First Son of the Sea Jinbe</li>
             </ul>
         </div>
     </div>
     <div class="lower-middle">
-     <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
-        <div>-Thor, God of Thunder</div>
+     <p>"I Don’t Want To Conquer Anything. I Just Think The Guy With The Most Freedom In The Entire Ocean Is The Pirate King."</p>
+        <div>-Luffy</div>
     </div>
     <div class="lower">
     <div>
