Add link to classs lower
-edit the h2 and p element of class lower
-insert a element in div element of class lower
-remove text-decorations in a element
-edit the footer class

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
     </div>
     <div class="lower">
     <div>
-        <h2>Call to action it's time!</h2>
-        <p>Sign up for our product by clicking the button right over there</p>
+        <h2>It's time to read One Piece</h2>
+        <p>Click here to read the latest chapter of One Piece manga for free</p>
     </div>
-        <button>Sign up</button>
+        <button><a href="https://chapmanganato.com/manga-aa951409/chapter-1086">Watch</a></button>
     </div>
     <div class="footer">
-        Copyright c The Odin Project 2021
+        Copyright MangaKakalot 
     </div>
 </body>
 </html>
