Change the header button

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="content-left">
             <p>One Piece</p>
             <div>
-            The webpage is for all the One Piece fans and Oda himself </div>
-            <button>Sign up</button>
+            This webpage is for all the One Piece fans and for Oda himself </div>
+            <button>Info About Oda</button>
         </div>
         <div class="content-right">
             <img src="One-Piece-Logo.jpg" alt="onepiece logo">
