Add link to content-left button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p>One Piece</p>
             <div>
             This webpage is for all the One Piece fans and for Oda himself </div>
-            <button>Info About Oda</button>
+            <button><a href="https://onepiece.fandom.com/wiki/Eiichiro_Oda">Info About Oda</a></button>
         </div>
         <div class="content-right">
             <img src="One-Piece-Logo.jpg" alt="onepiece logo">
